--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-vue3-tailwind-starter",
-  "version": "0.0.0",
+  "name": "finsell-company-site",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
