--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.22.3",
+    "core-js": "^3.16.3",
+    "gsap": "^3.7.1",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
   },
@@ -17,11 +20,30 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.3.3",
     "@types/tailwindcss": "^2.2.1",
-    "tailwindcss": "^2.2.7",
-    "@vue/compiler-sfc": "^3.2.6",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "@vitejs/plugin-vue": "^1.6.0",
-    "vite": "^2.5.1"
-  }
+    "@vue/compiler-sfc": "^3.2.6",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "autoprefixer": "^10.3.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.17.0",
+    "prettier": "2.3.2",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.1",
+    "vue-3-supabase": "^2.1.2",
+    "vue-tsc": "^0.3.0"
+  },
+  "description": "Finsell company profile site, created by ikziriv.art",
+  "keywords": [
+    "vue",
+    "vue3",
+    "supabase-js"
+  ],
+  "author": "Ikziriv",
+  "license": "MIT"
 }
