--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.22.3",
@@ -35,6 +37,7 @@
     "tailwindcss": "^2.2.7",
     "typescript": "^4.4.2",
     "vite": "^2.5.1",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-3-supabase": "^2.1.2",
     "vue-tsc": "^0.3.0"
   },
