--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.22.3",
     "core-js": "^3.16.3",
+    "css-doodle": "^0.19.2",
     "gsap": "^3.7.1",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
